[metadata]
name         = WkeMiniblink
description  = A python binding of Miniblink
keywords     =Miniblink Wke webbrowser
author       = StoneFlaw
author_email = wyh917@163.com
version      = attr: WkeMiniblink.__version__

[options]
zip_safe = false
install_requires = Pywin32

[options.extras_require]
docs =
    sphinx
    sphinx_rtd_theme

[options.entry_points]
pyinstaller40 =
    # .. _hook_registration:
    #
    # **Hook registration**: This entry point refers to a function
    # that will be invoked with no parameters. It must return a
    # sequence of strings, each element of which provides an
    # additional absolute path to search for hooks. This is equivalent
    # to passing the ``additional-hooks-dir`` `command-line option
    # <https://pyinstaller.readthedocs.io/en/stable/usage.html#what-to-bundle-where-to-search>`_
    # to PyInstaller for each string in the sequence.
    #
    # In this project, the function is ``get_hook_dirs``.
    hook-dirs = wkeMiniblink.__pyinstaller:get_hook_dirs



